--- a/trunk/Qroxy/nbproject/project.properties
+++ b/trunk/Qroxy/nbproject/project.properties
@@ -57,7 +57,7 @@ main.class=testuml.TestUml
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK 1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
