--- a/trunk/Qroxy/nbproject/project.properties
+++ b/trunk/Qroxy/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=fr.umlv.qroxy.Test
+main.class=fr.umlv.qroxy.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
