--- a/Qroxy/build.xml
+++ b/Qroxy/build.xml
@@ -10,6 +10,11 @@
 <project name="Qroxy" default="default" basedir=".">
     <description>Builds, tests, and runs the project Qroxy.</description>
     <import file="nbproject/build-impl.xml"/>
+    
+    <target name="-post-jar"> 
+        <copydir src="${basedir}/resources" dest="${dist.dir}" /> 
+    </target>
+
     <!--
 
     There exist several targets which are by default empty and which can be 
